# rust-anthropic-agent-with-mp4-memory

./: .env.example  .gitignore  ACHIEVEMENTS_SUMMARY.md  CHANGELOG.md  COMPREHENSIVE_TODO_LIST.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  DSPY_TODO_LIST.md  ENHANCED_INPUT_SYSTEM.md  FPBlock_Company_Report.md  FPBlock_Expansion_Analysis.md  PRODUCTION_READINESS_REPORT.md  README.md  SECURITY.md  TECHNICAL_DEBT_AUDIT.md  agent_config.toml.example  bouncing_ball_dodecahedron.html  bouncing_ball_dodecahedron_fixed.html  bouncing_dodecahedron.html  comprehensive_todo_list.md  debug.txt  demo_prompt.txt  deny.toml  pirate_popcorn_story.txt  test.html  test_prompt.txt  test_synaptic_integration.rs  update_dodecahedron.sh  working_test.txt
.augment/env/: setup.sh
3d-frogger-game/: game.js  index.html
docs/: DSPY_INTEGRATION.md  SECURITY_CICD.md
docs/cli/: dspy_cli_architecture.md  dspy_command_structure.md  dspy_configuration_schema.md  dspy_error_handling.md
docs/dspy/: README.md  best_practices.md  troubleshooting.md
docs/dspy/api/: README.md
examples/: basic_agent.rs  caching_demo.rs  memory_chat.rs  phase2_advanced_intelligence_demo.rs  tool_development.rs
examples/dspy/: advanced_usage.rs  basic_usage.rs
src/: lib.rs  main.rs
src/agent/: conversation.rs  dspy_integration.rs  memory_manager.rs  mod.rs  synaptic_agent.rs  tests.rs  tool_orchestrator.rs
src/anthropic/: client.rs  mod.rs  models.rs  tests.rs  tools.rs
src/audio/: codecs.rs  effects.rs  metadata.rs  mod.rs  streaming.rs  synthesis.rs  tests.rs  tool.rs  transcription.rs
src/caching/: backends.rs  invalidation.rs  memory_cache.rs  metrics.rs  mod.rs  policies.rs  redis_cache.rs  strategies.rs  tests.rs
src/cli/: interactive_chat.rs  interactive_console.rs  mod.rs  prompt_system.rs
src/cli/dspy/: config.rs  error.rs  mod.rs  utils.rs
src/cli/dspy/commands/: benchmark.rs  dev.rs  mod.rs  modules.rs  optimize.rs  pipeline.rs
src/compliance/: consent_management.rs  data_export.rs  data_retention.rs  mod.rs  privacy_controls.rs  tests.rs
src/config/: mod.rs  settings.rs
src/dspy/: advanced_optimizers.rs  benchmarks.rs  bootstrap.rs  cache.rs  causal_reasoning.rs  chain.rs  compiler.rs  composition.rs  error.rs  evaluator.rs  examples.rs  metrics.rs  mod.rs  module.rs  multimodal.rs  multimodal_metrics.rs  optimization.rs  performance.rs  predictor.rs  reasoning.rs  signature.rs  teleprompter.rs  tests.rs  tool_integration.rs  vision.rs
src/dspy/modules/: chain_of_thought.rs  mod.rs  program_of_thought.rs  rag.rs  react.rs  self_improving.rs
src/memory/: compression.rs  memvid_wrapper.rs  mod.rs  search.rs  search_algorithms.rs  simple_memory.rs  tests.rs
src/memory/search_algorithms/: tests.rs
src/memory/synaptic/: bridge.rs  config.rs  mock_synaptic.rs  mod.rs  tools.rs
src/monitoring/: alerts.rs  collectors.rs  exporters.rs  integration_tests.rs  metrics.rs  mod.rs  resource_tracker.rs  tests.rs
src/plugins/: loader.rs  manager.rs  mod.rs  registry.rs  tests.rs
src/security/: audit.rs  authentication.rs  authorization.rs  encryption.rs  middleware.rs  mod.rs  policy.rs  rate_limiting.rs  session.rs  tests.rs
src/tools/: advanced_memory_tools.rs  code_analysis.rs  custom_tools.rs  file_system.rs  http_client.rs  local_file_ops.rs  memory_tools.rs  mod.rs  tests.rs  text_editor.rs  websocket_client.rs
src/utils/: audit_logger.rs  circuit_breaker.rs  error.rs  error_recovery.rs  logging.rs  mod.rs  rate_limiter.rs  resource_monitor.rs  security_headers.rs  streaming.rs  validation.rs
test_game/: README.md  REFACTOR_README.md  game.js  game_modular.js  index.html  server.py  start.sh  test.sh
test_game/js/: EntityManager.js  GameController.js  GameEngine.js  config.js  utils.js
test_game/js/core/: GameState.js  PlayerStats.js  SceneManager.js
test_game/js/entities/: Enemy.js  EnemyManager.js  Entity.js  Item.js  ItemManager.js  Player.js  PlayerController.js
test_game/js/input/: InputManager.js
test_game/js/systems/: DungeonSystem.js  InputSystem.js  RenderSystem.js  UISystem.js
test_game/js/ui/: UIManager.js
test_game/js/world/: DungeonGenerator.js
test_game_02/: index.html  styles.css
test_game_02/js/: audio.js  combat.js  dungeon.js  entities.js  gameEngine.js  input.js  items.js  main.js  metaprogression.js  ui.js  utils.js
test_synaptic_memory.db/: db
tests/: dspy_benchmark_tests.rs  dspy_cli_tests.rs  dspy_multimodal_tests.rs  dspy_reasoning_tests.rs
tests/integration/: dspy_integration_tests.rs
