[package]
name = "rust_memvid_agent"
version = "0.1.0"
edition = "2021"
authors = ["Nicholas Ferguson <me@njf.io>"]
description = "AI agent system in Rust with Anthropic integration and MP4 memory storage"
license = "MIT"
repository = "https://github.com/njfio/rust_memvid_agent"
keywords = ["ai", "agent", "anthropic", "memory", "tools"]
categories = ["development-tools", "science", "text-processing"]

[[bin]]
name = "memvid-agent"
path = "src/main.rs"



[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
tokio-stream = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# HTTP client for Anthropic API
reqwest = { version = "0.11.27", features = ["json", "stream"] }

# CLI
clap = { version = "4.0", features = ["derive", "env"] }
colored = "2.1"
crossterm = "0.27"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.13"
toml = "0.7"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"

# File system operations
walkdir = "2.3"
tempfile = "3.8"

# Memory integration - using rust-synaptic (state-of-the-art AI memory system with FULL POWER!)
# Temporarily disabled due to candle-core dependency conflicts - will re-enable with compatible version
# synaptic = { git = "https://github.com/njfio/rust-synaptic.git", branch = "main", features = ["analytics", "sql-storage"], default-features = false }

# Code analysis integration - using rust-treesitter-agent-code-utility
rust_tree_sitter = { git = "https://github.com/njfio/rust-treesitter-agent-code-utility.git", branch = "main" }

# Text processing
regex = "1.0"

# Progress indicators
indicatif = "0.16"

# Environment variables
dotenv = "0.15"

# Async traits
async-trait = "0.1"

# URL parsing
url = "2.4"

# Random number generation
rand = "0.8"

# Pin problematic dependencies to avoid edition2024 requirement and newer rustc requirements
base64ct = "=1.6.0"
native-tls = "=0.2.11"
idna = "=0.4.0"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"
tokio-test = "0.4"

[features]
default = ["memory", "all-tools"]
memory = []
all-tools = ["text-editor", "memory-tools", "file-tools", "code-analysis"]
text-editor = []
memory-tools = []
file-tools = []
code-analysis = []
# Full power features for synaptic memory system (temporarily disabled)
# external-integrations = ["synaptic/external-integrations"]
# distributed = ["synaptic/distributed"]
# embeddings = ["synaptic/embeddings"]  # Disabled due to candle-core conflicts
# analytics = ["synaptic/analytics"]
# realtime = ["synaptic/realtime"]
# Combined feature for maximum stable power (temporarily disabled)
# full-power = ["external-integrations", "distributed", "analytics", "realtime"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
