[package]
name = "rust_memvid_agent"
version = "0.1.0"
edition = "2021"
authors = ["Nicholas Ferguson <me@njf.io>"]
description = "AI agent system in Rust with Anthropic integration and JSON-based synaptic memory"
license = "MIT"
repository = "https://github.com/njfio/rust_memvid_agent"
keywords = ["ai", "agent", "anthropic", "memory", "tools"]
categories = ["development-tools", "science", "text-processing"]

[[bin]]
name = "memvid-agent"
path = "src/main.rs"



[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
tokio-stream = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# HTTP client for Anthropic API
reqwest = { version = "0.11.27", features = ["json", "stream"] }

# CLI
clap = { version = "4.0", features = ["derive", "env"] }
colored = "2.1"
crossterm = "0.27"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.13"
toml = "0.8"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
# Security dependencies
jsonwebtoken = "9.2"
argon2 = "0.5"
ring = "0.17"
base64 = "0.21"
zeroize = { version = "1.7", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

# File system operations
walkdir = "2.3"
tempfile = "3.8"

# Memory integration - using rust-synaptic (state-of-the-art AI memory system with FULL POWER!)
synaptic = { git = "https://github.com/njfio/rust-synaptic.git", rev = "3aa522cb0d44074274261b4022c0921a7ffc4f1c", features = ["bincode"], default-features = false }

# Code analysis integration - using rust-treesitter-agent-code-utility
rust_tree_sitter = { git = "https://github.com/njfio/rust-treesitter-agent-code-utility.git", branch = "main" }

# Text processing
regex = "1.0"

# Progress indicators
indicatif = "0.16"

# Environment variables - replaced unmaintained dotenv with dotenvy
dotenvy = "0.15"

# Async traits
async-trait = "0.1"

# URL parsing
url = "2.4"

# Random number generation
rand = "0.8"

# Security and validation
validator = { version = "0.18", features = ["derive"] }
secrecy = "0.8"
governor = "0.6"  # Rate limiting
nonzero_ext = "0.3"  # For rate limiting configuration

# Additional dependencies for new security features
# tempfile already included above

# Pin problematic dependencies to avoid edition2024 requirement and newer rustc requirements
base64ct = "=1.6.0"
native-tls = "=0.2.11"
# Updated to fix RUSTSEC-2024-0421: Punycode labels vulnerability
idna = ">=1.0.0"
flate2 = "1.1.2"
lz4_flex = "0.11"
zstd = "0.13"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"
tokio-test = "0.4"

[features]
default = ["memory", "all-tools"]
memory = []
all-tools = ["text-editor", "memory-tools", "file-tools", "code-analysis"]
text-editor = []
memory-tools = []
file-tools = []
code-analysis = []
# Full power features for synaptic memory system
external-integrations = ["synaptic/external-integrations"]
distributed = ["synaptic/distributed"]
embeddings = ["synaptic/embeddings"]
# analytics = ["synaptic/analytics"]  # Disabled due to candle-core dependency conflicts
realtime = ["synaptic/realtime"]
# Combined feature for maximum stable power
full-power = ["external-integrations", "distributed", "realtime", "embeddings"]
# Additional features for future expansion
multimodal = []
cross-platform = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true

